fix: fix jumping text in sidebar

--- a/src/app/header/header.component.scss
+++ b/src/app/header/header.component.scss
@@ -105,10 +105,10 @@
     z-index: 1;
     top: 0;
     left: 0;
-    font-family: Roboto, "Helvetica Neue", sans-serif;
+    font-family: 'Bubblegum Sans', cursive;
     background-color: #333;
-    overflow-x: hidden;
-    transition: 0.5s;
+    overflow: hidden;
+    transition: 0.4s ease-out;
     padding-top: 60px;
     a {
         padding: 20px 8px 8px 32px;
@@ -116,11 +116,10 @@
         font-size: 2.8rem;
         color: #fff;
         display: block;
-        transition: 0.3s;
+        transition: 0.3s ease-out;
+        white-space: nowrap;
         &:hover {
-            font-family: 'Bubblegum Sans', cursive;
             color: #f59483;
-            font-size: 2.6rem;
         }
     }
     .closebtn {
@@ -129,6 +128,8 @@
         right: 25px;
         font-size: 2.8rem;
         margin-left: 50px;
+        font-family: 'Bubblegum Sans', cursive;
+        cursor: pointer;
     }
 }
 
